Refactor existing APIs
